<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>so_pharao</name>
  <version>0.0.1</version>
  <description>Package for development with PhaRaO</description>

  <maintainer email="lenming@dso.org.sg">Joel Loo</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake_autovision</buildtool_depend>
  <build_depend>autovision_common</build_depend>
  <build_depend>image_converter</build_depend>
  <build_depend>autovision_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rmw_connext_qos</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rmw_connext_qos</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
